--- a/starter_code/model_1.ipynb
+++ b/starter_code/model_1.ipynb
@@ -455,34 +455,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "X_scaler = StandardScaler().fit(X_train)\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "X_scaler = MinMaxScaler().fit(X_train)\n",
     "\n",
     "X_train_scaled = X_scaler.transform(X_train)\n",
     "X_test_scaled = X_scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "scaler = MinMaxScaler()\n",
-    "print(scaler.fit(X_train))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MinMaxScaler()\n",
-    "print(scaler.data_max_)\n",
-    "print(scaler.transform(X_train)\n",
-    "print(scaler.transform(X_test)"
    ]
   },
   {
@@ -1726,6 +1703,70 @@
      "text": [
       "[CV] ................... C=50, gamma=0.001, score=0.787, total= 2.5min\n",
       "[CV] C=50, gamma=0.001 ...............................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.001, score=0.769, total= 3.8min\n",
+      "[CV] C=50, gamma=0.001 ...............................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.001, score=0.784, total= 2.1min\n",
+      "[CV] C=50, gamma=0.001 ...............................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.001, score=0.787, total= 2.3min\n",
+      "[CV] C=50, gamma=0.005 ...............................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.005, score=0.786, total= 2.5min\n",
+      "[CV] C=50, gamma=0.005 ...............................................\n"
      ]
     },
     {
