cleaning up code

--- a/starter_code/model_1.ipynb
+++ b/starter_code/model_1.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1776,6 +1776,91 @@
       "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.005, score=0.787, total= 2.5min\n",
+      "[CV] C=50, gamma=0.005 ...............................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.005, score=0.769, total= 3.8min\n",
+      "[CV] C=50, gamma=0.005 ...............................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.005, score=0.784, total= 2.0min\n",
+      "[CV] C=50, gamma=0.005 ...............................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=50, gamma=0.005, score=0.787, total= 2.3min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  80 out of  80 | elapsed: 107.5min finished\n",
+      "C:\\Users\\tawnyn\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score=nan,\n",
+       "             estimator=SVC(C=1.0, break_ties=False, cache_size=200,\n",
+       "                           class_weight=None, coef0=0.0,\n",
+       "                           decision_function_shape='ovr', degree=3,\n",
+       "                           gamma='scale', kernel='linear', max_iter=-1,\n",
+       "                           probability=False, random_state=None, shrinking=True,\n",
+       "                           tol=0.001, verbose=False),\n",
+       "             iid='deprecated', n_jobs=None,\n",
+       "             param_grid={'C': [1, 5, 10, 50],\n",
+       "                         'gamma': [0.0001, 0.0005, 0.001, 0.005]},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring=None, verbose=3)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1785,9 +1870,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 50, 'gamma': 0.0001}\n",
+      "0.7827591162794082\n"
+     ]
+    }
+   ],
    "source": [
     "print(grid2.best_params_)\n",
     "print(grid2.best_score_)"
